# orange

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
lib/: EntryPoint.h
lib/core/: Log.cpp  Log.h  LogCustomFormatters.h  Resources.cpp  Resources.h
lib/images/: embed_images.sh  extract_images.sh  resources.embed
lib/ui/: Application.cpp  Application.h  ImGuiTheme.cpp  ImGuiTheme.h  Image.cpp  Image.h  Layer.h  UI.cpp  UI.h
src/: SampleApp.cpp  main.cpp
